testing/framework/resources/Advanced/Failing/mondrian/query6077.q
select count(*) as c0 from agg_10_foo_fact as agg_10_foo_fact;
